# calmdump

./: CMakeLists.txt  README.md  premake4.lua  premake5.lua
example/: CMakeLists.txt  test.cpp
src/: CrashHandler.cpp  CrashHandler.h  CrashRpt.cpp  CrashRpt.h  DbgHlp.cpp  Dbghlp.h  Report.cpp  Report.h  Utility.cpp  Utility.h
tests/: test.cpp
